--- a/src/App.css
+++ b/src/App.css
@@ -21,13 +21,13 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 10px;
-  background-color: white;
+  background-color: #f9f9f9;
 }
 
 .quote-author {
   font-size: 20px;
   color: #555;
-  background-color: white;
+  background-color: #f9f9f9;
 }
 
 .button-container {
@@ -62,4 +62,23 @@ button i {
 .error {
   color: red;
   font-weight: bold;
+}
+ header {
+  padding: 20px;
+  color: white;
+ }
+
+ .filter-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.filter-container input, .filter-container select {
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
 }
